--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ url: "http://blog.2simon.nl" # the base hostname & protocol for your site
 twitter_username: simonkoudijs
 github_username: sunib
 highlighter: rouge
-theme: minima
+theme: jekyll-theme-midnight
 
 # Build settings
 markdown: kramdown
